Improve OpenAPI response schema detection
