# openapi.json
@@ -588,8 +588,13 @@
                                     "type": "object",
                                     "properties": {
                                         "success": {
-                                            "type": "boolean",
-                                            "example": true
+                                            "type": "boolean"
+                                        },
+                                        "read_messages": {
+                                            "type": "string"
+                                        },
+                                        "count": {
+                                            "type": "integer"
                                         }
                                     }
                                 }
@@ -1211,7 +1216,10 @@
                                             "type": "boolean"
                                         },
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         },
                                         "total": {
                                             "type": "string"
@@ -1332,8 +1340,10 @@
                                     "type": "object",
                                     "properties": {
                                         "success": {
-                                            "type": "boolean",
-                                            "example": true
+                                            "type": "boolean"
+                                        },
+                                        "turnstile_sitekey": {
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -1377,7 +1387,10 @@
                                             "type": "boolean"
                                         },
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         }
                                     }
                                 }
@@ -1581,7 +1594,10 @@
                                             "type": "boolean"
                                         },
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         },
                                         "total": {
                                             "type": "string"
@@ -1968,7 +1984,10 @@
                                             "type": "boolean"
                                         },
                                         "users": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         }
                                     }
                                 }
@@ -2088,8 +2107,16 @@
                                     "type": "object",
                                     "properties": {
                                         "success": {
-                                            "type": "boolean",
-                                            "example": true
+                                            "type": "boolean"
+                                        },
+                                        "messages": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
+                                        },
+                                        "debug": {
+                                            "type": "object"
                                         }
                                     }
                                 }
@@ -2189,7 +2216,10 @@
                                             "type": "boolean"
                                         },
                                         "data": {
-                                            "type": "string"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         }
                                     }
                                 }
